force-app/main/default/objects/VCG_CPQ_Pricing_Access_Sequence__c/VCG_CPQ_Pricing_Access_Sequence__c.object-meta.xml
<CustomObject>
    <label>VCG CPQ Pricing Access Sequence</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>VCG CPQ Pricing Access Sequences</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>