force-app/main/default/objects/VCG_CPQ_Pricing_Access_Sequence__c/fields/Assign_To__c.field-meta.xml
<CustomField>
    <fullName>Assign_To__c</fullName>
    <description>If set, this is the field we want to assign the result value to in the current object (Quote or Quote Line Item). Only Quote &amp; Quote Product records will be assigned, if the same Access Sequence is used for Assets, the asset record will not be modified, even in memory.</description>
    <label>Assign To</label>
    <length>255</length>
    <type>Text</type>
</CustomField>