force-app/main/default/objects/VCG_CPQ_Pricing_Access_Sequence__c/fields/Debug__c.field-meta.xml
<CustomField>
    <fullName>Debug__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Select to turn on debug output for this access sequence. (Debug output to SF debug logs with log level ERROR.)</inlineHelpText>
    <label>Debug</label>
    <type>Checkbox</type>
</CustomField>