force-app/main/default/objects/VCG_CPQ_Pricing_Access_Sequence__c/fields/Needs_Fields__c.field-meta.xml
<CustomField>
    <fullName>Needs_Fields__c</fullName>
    <label>Needs Fields</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>